Phase 2.3 complete: async routes, Redis, OTP, caching, first test

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 DATABASE_URL=postgresql://immigration_user:bnVInYFXJuKq6KHy3jNyPC0ZqQu0cjLk@dpg-cviikt56ubrc73dbfsq0-a.frankfurt-postgres.render.com/immigration
+EMAIL_ADDRESS=losstng@yahoo.com
+EMAIL_PASSWORD=cloybgzuimsjrbxy
+SECRET_KEY=super-secret-string
+ACCESS_TOKEN_EXPIRE_MINUTES=3
+ALGORITHM=HS256
+REFRESH_TOKEN_EXPIRE_MINUTES=1440
+REDIS_HOST=localhost
+REDIS_PORT=6379
