--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,21 @@
 {
-    "files.exclude": {
-      "**/.venv": true,
-      "**/__pycache__": true
-    },
-    "search.exclude": {
-      "**/.venv": true,
-      "**/__pycache__": true
-    },
-    "python.analysis.exclude": [
-      "**/.venv"
-    ]
-  }
+  "files.exclude": {
+    "**/.venv": true,
+    "**/__pycache__": true,
+    "**/.pytest_cache": true,
+    "**/alembic/versions": false,
+    "**/*.log": true
+  },
+  "search.exclude": {
+    "**/.venv": true,
+    "**/__pycache__": true,
+    "**/.pytest_cache": true,
+    "**/alembic/versions": false,
+    "**/*.log": true
+  },
+  "python.analysis.exclude": [
+    "**/.venv",
+    "**/__pycache__",
+    "**/.pytest_cache"
+  ]
+}
