--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,18 +4,24 @@
     "**/__pycache__": true,
     "**/.pytest_cache": true,
     "**/alembic/versions": false,
-    "**/*.log": true
+    "**/*.log": true,
+    "**/node_modules": true,
+    "**/.next": true
   },
   "search.exclude": {
     "**/.venv": true,
     "**/__pycache__": true,
     "**/.pytest_cache": true,
     "**/alembic/versions": false,
-    "**/*.log": true
+    "**/*.log": true,
+    "**/node_modules": true,
+    "**/.next": true
   },
   "python.analysis.exclude": [
     "**/.venv",
     "**/__pycache__",
-    "**/.pytest_cache"
+    "**/.pytest_cache",
+    "**/node_modules",
+    "**/.next"
   ]
 }
